# ghelper

./: .gitignore  LICENSE  README.md
test_genshin/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
test_genshin/autofish/: CMakeLists.txt  autofish.cpp  autofish.h
test_genshin/config/: app_win32.rc  config.yml  test_genshin_zh_CN.ts
test_genshin/config/disc/: help.txt
test_genshin/config/disc/task_disc/: AUTO_FISH.ghs  TEST_CAP.ghs  TEST_LOCATE.ghs
test_genshin/config/map/: map_yuanxiagong.png.yml
test_genshin/gwindow/: CMakeLists.txt  gwindow.cpp  gwindow.h
test_genshin/key_hook/: CMakeLists.txt  hook.cpp  hook.h
test_genshin/locatemap/: CMakeLists.txt  locate.cpp  locate.h  qtree.h
test_genshin/user_script/: test.ghs  test1  (3).ghs
test_genshin/workthread/: CMakeLists.txt  ghthread.cpp  ghthread.h
